--- a/Views/Country/Delete.cshtml
+++ b/Views/Country/Delete.cshtml
@@ -19,6 +19,8 @@
         <dd class="col-sm-10">@Html.DisplayFor(model => model.CurrencyName)</dd>
     </dl>
     
+    <div asp-validation-summary="All" class="text-danger"></div>
+    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
