Kuvab pilti ja saab edititida

--- a/Views/Customer/Details.cshtml
+++ b/Views/Customer/Details.cshtml
@@ -20,7 +20,7 @@
         <dd class="col-sm-9">
             @if (!string.IsNullOrEmpty(Model.PhotoUrl))
             {
-                <img src="@Model.PhotoUrl" alt="Customer Photo" style="max-width:150px;max-height:150px;" />
+                <img src="@Url.Content($"~/Images/{Model.PhotoUrl}")" alt="Customer Photo" style="max-width:150px;max-height:150px;" />
             }
         </dd>
     </dl>
