--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -65,7 +65,7 @@
 
 						<label asp-for="ProfilePhoto" class="control-label"></label>				                                                
 
-						<img id="PreviewPhoto" src="~/images/noimage.png" alt="Logo Image"
+						<img id="PreviewPhoto" src="~/Images/noimage.png" alt="Logo Image"
 							 width="125" height="125"/>
 					    
 						<span asp-validation-for="PhotoUrl" class="text-danger"></span>
@@ -100,31 +100,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(function () {
-            $('#CountryId').change(function () {
-                var countryId = $(this).val();
-                $('#CityId').empty();
-                if (countryId) {
-                    $.getJSON('/City/GetCitiesByCountry', { countryId: countryId }, function (data) {
-                        $('#CityId').append($('<option>').text('----Select City----').attr('value', ''));
-                        $.each(data, function (i, city) {
-                            $('#CityId').append($('<option>').text(city.name).attr('value', city.id));
-                        });
-                    });
-                } else {
-                    $('#CityId').append($('<option>').text('----Select City----').attr('value', ''));
-                }
-            });
-        });
-            $(".custom-file-input").on("change", function () {
-
-            var fileName = $(this).val().split("\\").pop();           
-                  
-            document.getElementById('PreviewPhoto').src = window.URL.createObjectURL(this.files[0]);
-      
-            document.getElementById('PhotoUrl').value = fileName;     
-
-    });
-    </script>
 } 
