--- a/Views/Customer/Details.cshtml
+++ b/Views/Customer/Details.cshtml
@@ -16,6 +16,8 @@
         <dd class="col-sm-9">@Html.DisplayFor(model => model.EmailId)</dd>
         <dt class="col-sm-3">City</dt>
         <dd class="col-sm-9">@Model.City?.Name</dd>
+        <dt class="col-sm-3">Country</dt>
+        <dd class="col-sm-9">@Model.City?.Country?.Name</dd>
         <dt class="col-sm-3">Photo</dt>
         <dd class="col-sm-9">
             @if (!string.IsNullOrEmpty(Model.PhotoUrl))
