--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -47,7 +47,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="CountryId" class="control-label">Country</label>
-                <select asp-for="CountryId" class="form-control" asp-items="ViewBag.Countries"></select>
+                <div class="input-group">
+                    <select asp-for="CountryId" class="form-control" asp-items="ViewBag.Countries"></select>
+                    <button type="button" class="btn btn-link" onclick="ShowCountryCreateModal()">Add New Country</button>
+                </div>
                 <span asp-validation-for="CountryId" class="text-danger"></span>
             </div>
             <div class="form-group">
