--- a/Views/Customer/Create.cshtml
+++ b/Views/Customer/Create.cshtml
@@ -103,4 +103,93 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-} 
+    <script>
+        $(document).ready(function () {
+            $("#CountryId").change(function () {
+                var countryId = $(this).val();
+                if (countryId) {
+                    $.ajax({
+                        url: '@Url.Action("GetCitiesByCountry", "Customer")',
+                        type: 'GET',
+                        data: { countryId: countryId },
+                        success: function (cities) {
+                            $("#CityId").empty();
+                            $("#CityId").append('<option value="">----Select City----</option>');
+                            $.each(cities, function (i, city) {
+                                $("#CityId").append('<option value="' + city.value + '">' + city.text + '</option>');
+                            });
+                        }
+                    });
+                } else {
+                    $("#CityId").empty();
+                    $("#CityId").append('<option value="">----Select City----</option>');
+                }
+            });
+        });
+
+        function ShowCountryCreateModal() {
+            $('#createModelDialog').modal('show');
+        }
+
+        function CreateCountry() {
+            var countryData = {
+                Name: $('#CountryName').val(),
+                Code: $('#CountryCode').val(),
+                CurrencyName: $('#CurrencyName').val()
+            };
+
+            $.ajax({
+                url: '@Url.Action("Create", "Country")',
+                type: 'POST',
+                data: countryData,
+                success: function (result) {
+                    if (result.success) {
+                        // Add the new country to the dropdown
+                        var newOption = new Option(result.name, result.id, true, true);
+                        $("#CountryId").append(newOption).trigger('change');
+                        
+                        // Close the modal
+                        $('#createModelDialog').modal('hide');
+                        
+                        // Clear the form
+                        $('#CountryName').val('');
+                        $('#CountryCode').val('');
+                        $('#CurrencyName').val('');
+                    }
+                }
+            });
+        }
+    </script>
+}
+
+<!-- Country Creation Modal -->
+<div class="modal fade" id="createModelDialog" tabindex="-1" role="dialog" aria-labelledby="createModelDialogLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createModelDialogLabel">Create New Country</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="CountryName">Country Name</label>
+                    <input type="text" class="form-control" id="CountryName" required>
+                </div>
+                <div class="form-group">
+                    <label for="CountryCode">Country Code</label>
+                    <input type="text" class="form-control" id="CountryCode" required>
+                </div>
+                <div class="form-group">
+                    <label for="CurrencyName">Currency Name</label>
+                    <input type="text" class="form-control" id="CurrencyName" required>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="CreateCountry()">Create Country</button>
+            </div>
+        </div>
+    </div>
+</div> 
