--- a/Views/Shared/_CreateModelDialog.cshtml
+++ b/Views/Shared/_CreateModelDialog.cshtml
@@ -4,17 +4,33 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="createModelDialogLabel">Create Model</h5>
+                <h5 class="modal-title" id="createModelDialogLabel">Create New Country</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                @* Place your form or content here *@
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <form id="createCountryForm" asp-controller="Country" asp-action="Create" data-ajax="true" data-ajax-method="POST" data-ajax-success="OnCountryCreated">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label for="Code" class="control-label">Code</label>
+                        <input name="Code" id="Code" class="form-control" />
+                        <span class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="Name" class="control-label">Name</label>
+                        <input name="Name" id="Name" class="form-control" />
+                        <span class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="CurrencyName" class="control-label">Currency Name</label>
+                        <input name="CurrencyName" id="CurrencyName" class="form-control" />
+                        <span class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
             </div>
         </div>
     </div>
